...
}) as number;

const TABS = [
  {
    name: "home",
    href: "/home",
    label: "Home",
    icon: House,
    testID: "tab-home",
  },
  {
    name: "friends",
    href: "/friends",
    label: "Friends",
    icon: Users,
    testID: "tab-friends",
  },
  {
    name: "profile",
    href: "/profile",
    label: "Profile",
    icon: CircleUser,
...
